event-driven workflows + fixed data integrity issues due to transaction issues for predictions